--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Academic Webpage" />
+    <meta property="og:image" content="static/assets/img/photo.png" />
     <meta name="author" content="senli1073" />
     <title id="title"></title>
 
