--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Academic Webpage" />
+    <meta name="description" content="Webpage for Daniel KT demo" />
     <meta property="og:image" content="static/assets/img/photo.png" />
+    <meta name="robots" content="index,follow">
+
     <meta name="author" content="senli1073" />
     <title id="title"></title>
 
