--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Webpage for Daniel KT demo" />
     <meta property="og:image" content="static/assets/img/photo.png" />
     <meta name="robots" content="index,follow">
+    <meta name="google-site-verification" content="5yt-H9lZC8Nob52MtqZJgaVZXA4pQ6-TMSqFxAY3fk4" />
 
     <meta name="author" content="senli1073" />
     <title id="title"></title>
