--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Webpage for Daniel KT demo" />
     <meta property="og:image" content="static/assets/img/photo.png" />
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
     <meta name="robots" content="index,follow">
     <meta name="google-site-verification" content="5yt-H9lZC8Nob52MtqZJgaVZXA4pQ6-TMSqFxAY3fk4" />
 
